Fixed missing margin in announcements

--- a/kenga-elearn/stylesheet.css
+++ b/kenga-elearn/stylesheet.css
@@ -378,3 +378,8 @@ table.toppagenavigation td {
     border-radius: 10px;
     padding: 5px;
 }
+
+/** Fix for announcements **/
+.outerwrapper {
+    margin-right:10px;
+}
